--- a/ampersand.html
+++ b/ampersand.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/png" href="assets/favicon.png" sizes="16x16" />
-
     <script src="https://use.typekit.net/gdn0yid.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script>
@@ -34,9 +33,9 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row header">
+      <div class="row header inverse">
         <div class="col-md-12">
-          <nav class="navbar ">
+          <nav class="navbar">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -48,36 +47,33 @@
             </div>
             <div class="collapse navbar-collapse navbar-right" id="header-collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Work</a></li>
+                <li><a href="/index.html">Work</a></li>
                 <li><a href="/about.html">About</a></li>
               </ul>
             </div>
           </nav>
         </div>
       </div>
-      <div class="row section hero">
-        <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-          <h1>Ampersand</h1>
-          <h2>An award-winning, quantum physics-inspired music video</h2>
-          <div class="calls-to-action">
-            <a class="btn btn-primary" href="/ampersand.html" role="button" data-toggle="modal" data-target="">Watch now</a>
-          </div>
-          <!-- <div class="award seattle"><img src="assets/Seattle.svg" alt="Seattle"></div> -->
+      <div class="row section">
+        <div class="col-sm-7">
+          <img class="img-responsive" src="assets/ampersand.png"/>
         </div>
-      </div>
-      <div class="row section projects">
-        <div class="col-md-12 col-xl-10 col-xl-offset-1">
-          <div class="row vertical-align">
-            <div class="col-sm-4">
-              <a class="project-item" href="/redtail.html" title=""><img src="assets/illustration.png" class="img-responsive"><span class="project-title">Illustration</span></a>
-            </div>
-            <div class="col-sm-4">
-              <a class="project-item" href="/product-design.html" title=""><img src="assets/product-design.png" class="img-responsive"><span class="project-title">Product Design</span></a>
-            </div>
-            <div class="col-sm-4">
-              <a class="project-item" href="/animation.html" title=""><img src="assets/prana.png" class="img-responsive"><span class="project-title">Animation</span></a>
-            </div>
-          </div>
+        <div class="col-sm-5">
+          <h4>Ampersand</h4>
+          <p><i>Ampersand</i> is a quantum physics-inspired music video for the song "In Love with Dusk" by <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a>. I won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce it, and it has screened in film festivals and galleries in almost a dozen countries across five continents.
+          <p><b>I'll be releasing Ampersand here at the beginning of February</b>, but if you'd like to see it before then, please <a href="mailto:eclareshea@gmail.com?subject=Ampersand">email me</a>.</p>
+          <h5>Festivals + Screenings</h5>
+          <ul>
+            <li>Semi-Finalist: Fresh Meet International Festival Ecuador, 2017</li>
+            <li>Official Selection: California Women's Film Festival, 2017</li>
+            <li>Official Selection: Bay Area International Children's Film Festival, 2017</li>
+            <li>Official Selection: Children's Film Festival Seattle, 2017</li>
+            <li>Official Selection: Best Film Awards Festival, Romania, 2017</li>
+            <li>Official Selection: Bellingham Children's Film Festival, 2017</li>
+            <li>Official Selection: Los Angeles International Children's Film Festival, 2016</li>
+            <li>Official Selection: Gdansk International Animation Festival, Poland 2016</li>
+            <li>Official Selection: Adobe First Frame Festival, Hollywood, 2016</li>
+          </ul>
         </div>
       </div>
 
