--- a/product-design.html
+++ b/product-design.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/png" href="assets/favicon.png" sizes="16x16" />
-
     <script src="https://use.typekit.net/gdn0yid.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script>
@@ -34,9 +33,9 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row header">
+      <div class="row header inverse">
         <div class="col-md-12">
-          <nav class="navbar ">
+          <nav class="navbar">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -48,36 +47,22 @@
             </div>
             <div class="collapse navbar-collapse navbar-right" id="header-collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Work</a></li>
+                <li><a href="/index.html">Work</a></li>
                 <li><a href="/about.html">About</a></li>
               </ul>
             </div>
           </nav>
         </div>
       </div>
-      <div class="row section hero">
-        <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-          <h1>Ampersand</h1>
-          <h2>An award-winning, quantum physics-inspired music video</h2>
-          <div class="calls-to-action">
-            <a class="btn btn-primary" href="/ampersand.html" role="button" data-toggle="modal" data-target="">Watch now</a>
-          </div>
-          <!-- <div class="award seattle"><img src="assets/Seattle.svg" alt="Seattle"></div> -->
+      <div class="row section">
+        <div class="col-sm-7">
+          <img class="img-responsive" src="assets/signal-sciences.png"/>
         </div>
-      </div>
-      <div class="row section projects">
-        <div class="col-md-12 col-xl-10 col-xl-offset-1">
-          <div class="row vertical-align">
-            <div class="col-sm-4">
-              <a class="project-item" href="/redtail.html" title=""><img src="assets/illustration.png" class="img-responsive"><span class="project-title">Illustration</span></a>
-            </div>
-            <div class="col-sm-4">
-              <a class="project-item" href="/product-design.html" title=""><img src="assets/product-design.png" class="img-responsive"><span class="project-title">Product Design</span></a>
-            </div>
-            <div class="col-sm-4">
-              <a class="project-item" href="/animation.html" title=""><img src="assets/prana.png" class="img-responsive"><span class="project-title">Animation</span></a>
-            </div>
-          </div>
+        <div class="col-sm-5">
+          <h4>Product Design</h4>
+          <p>Since May of 2014, I've worked as a Product Designer at <a href="https://www.signalsciences.com/" target="blank">Signal Sciences</a>, a web security start-up in Venice, CA.</p>
+          <p>(Cyber)security is something that increasingly impacts all of us as more and more of our data and lives are moving online. I work with an amazing cross-functional group to design and build a real-time monitoring and blocking software product that's used by security teams at companies like <b>Vimeo</b>, <b>Etsy</b>, <b>Under Armour</b>, and many more. By visualizing web traffic data in new and clear ways, our product helps companies understand exactly when they're being hacked, who's hacking them, and how.</p>
+          <p>My work encompasses a range of specialties, from user experience (UX) design to user interface (UI) design and front-end coding.</p>
         </div>
       </div>
 
