Copy updates to Ampersand

--- a/ampersand.html
+++ b/ampersand.html
@@ -62,9 +62,10 @@
           <h4>Ampersand</h4>
           <p><i>Ampersand</i> is a quantum physics-inspired music video for the song "In Love with Dusk" by <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a>. I won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce it, and it has screened in film festivals and galleries in almost a dozen countries across five continents.
           <p><b>I'll be releasing Ampersand here at the beginning of February</b>, but if you'd like to see it before then, please <a href="mailto:eclareshea@gmail.com?subject=Ampersand">email me</a>.</p>
-          <h5>Festivals + Screenings</h5>
+          <h5>Festivals + Awards</h5>
           <ul>
-            <li>Semi-Finalist: Fresh Meet International Festival Ecuador, 2017</li>
+            <li>Winner: Sloan Science and Film Grant</li>
+            <li>Official Selection: Fresh Meet International Festival Ecuador, 2017</li>
             <li>Official Selection: California Women's Film Festival, 2017</li>
             <li>Official Selection: Bay Area International Children's Film Festival, 2017</li>
             <li>Official Selection: Children's Film Festival Seattle, 2017</li>
