--- a/ampersand.html
+++ b/ampersand.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row section">
         <div class="col-sm-7">
-          <img class="img-responsive" src="assets/ampersand.png"/>
+          <img class="img-responsive" src="assets/ampersand.jpg"/>
         </div>
         <div class="col-sm-5">
           <h4>Ampersand</h4>
