Adds next text to Product design and images

--- a/product-design.html
+++ b/product-design.html
@@ -60,9 +60,11 @@
         </div>
         <div class="col-sm-5">
           <h4>Product Design</h4>
-          <p>Since May of 2014, I've worked as a Product Designer at <a href="https://www.signalsciences.com/" target="blank">Signal Sciences</a>, a web security start-up in Venice, CA.</p>
-          <p>(Cyber)security is something that increasingly impacts all of us as more and more of our data and lives are moving online. I work with an amazing cross-functional group to design and build a real-time monitoring and blocking software product that's used by security teams at companies like <b>Vimeo</b>, <b>Etsy</b>, <b>Under Armour</b>, and many more. By visualizing web traffic data in new and clear ways, our product helps companies understand exactly when they're being hacked, who's hacking them, and how.</p>
-          <p>My work encompasses a range of specialties, from user experience (UX) design to user interface (UI) design and front-end coding.</p>
+          <p>Since May of 2014, I've worked as a Product Designer at <a href="www.signalsciences.com" target="blank">Signal Sciences</a>, a web application security start-up in Venice, CA.</p>
+          <p>(Cyber)security is something that increasingly impacts all of us as more and more of our personal data moves online. I work with an amazing cross-functional group to design and build a web protection platform that provides real-time monitoring and blocking against potential attacks.</p>
+          <p>Signal Sciences is designed for collaboration, so operations, development, and security teams can work together seamlessly toward a common goal; it offers actionable, real-time application security data to help companies know when there’s a meaningful problem to address so your security team can easily prioritize their efforts. By visualizing web traffic data in new and clear ways, our product helps companies understand exactly when they're being hacked, who's hacking them, and how.</p>
+          <p>Signal Sciences is trusted by companies like Vimeo, Etsy, Under Armour.</p>
+          <p>My work with Signal Sciences encompasses a range of roles, from user experience (UX) design to user interface (UI) design, and some front-end coding.</p>
         </div>
       </div>
 
