--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           </div>
           <!-- <div class="award seattle"><img src="assets/Seattle.svg" alt="Seattle"></div> -->
         </div>
+
+        <div class="sloan">
+          <img class="sloan-svg" src="assets/sloan.svg">
+        </div>
       </div>
       <div class="row section projects">
         <div class="col-md-12 col-xl-10 col-xl-offset-1">
@@ -72,7 +76,7 @@
               <a class="project-item" href="/redtail.html" title=""><img src="assets/illustration.png" class="img-responsive"><span class="project-title">Illustration</span></a>
             </div>
             <div class="col-sm-4">
-              <a class="project-item" href="/product-design.html" title=""><img src="assets/product-design.png" class="img-responsive"><span class="project-title">Product Design</span></a>
+              <a class="project-item" href="/product-design.html" title=""><img src="assets/product-design.jpg" class="img-responsive"><span class="project-title">Product Design</span></a>
             </div>
             <div class="col-sm-4">
               <a class="project-item" href="/animation.html" title=""><img src="assets/prana.png" class="img-responsive"><span class="project-title">Animation</span></a>
