--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <div class="navbar-brand"><a href="/index.html">Erin Clare Shea</a><span class="thin-light">|</span><span class="thin">Designer + Artist</span></div>
+              <div class="navbar-brand"><a href="/index.html">Erin Clare Shea</a><span class="thin-light">|</span><span class="thin">Designer + Artist</span><span class="thin-mobile">Design + Art</span></div>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="header-collapse">
               <ul class="nav navbar-nav">
