--- a/ampersand.html
+++ b/ampersand.html
@@ -56,6 +56,9 @@
       </div>
       <div class="row section">
         <div class="col-sm-7">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/183772682" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
           <img class="img-responsive" src="assets/ampersand.jpg"/>
         </div>
         <div class="col-sm-5">
