--- a/ampersand.html
+++ b/ampersand.html
@@ -65,7 +65,7 @@
           <h4>Ampersand</h4>
           <p><em>Ampersand</em> is a quantum physics-inspired music video for the song "In Love with Dusk" by <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a>. I won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce it, and it has screened in film festivals and galleries in almost a dozen countries across five continents.</p>
           <p>The intent behind <em>Ampersand</em> was to take the audience on a delightful journey from the subatomic to the galactic and to whimsically illustrate how everything is made of atoms, which behave as both particle and waves.</p>
-          <p><strong>I'll be releasing <em>Ampersand</em> here at the beginning of February</strong>, but if you'd like to see it before then, please <a href="mailto:eclareshea@gmail.com?subject=Ampersand">email me</a>.</p>
+          <p><strong>I'll be releasing <em>Ampersand</em> here on February 15th</strong>, but if you'd like to see it before then, please <a href="mailto:eclareshea@gmail.com?subject=Ampersand">email me</a>.</p>
           <h5>Festivals + Awards</h5>
           <ul>
             <li>Winner: Sloan Science and Film Grant</li>
