--- a/ampersand.html
+++ b/ampersand.html
@@ -65,14 +65,19 @@
           <h4>Ampersand</h4>
           <p><em>Ampersand</em> is a quantum physics-inspired music video for the song "In Love with Dusk" by <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a>. I won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce it, and it has screened in film festivals and galleries in almost a dozen countries across five continents.</p>
           <p>The intent behind <em>Ampersand</em> was to take the audience on a delightful journey from the subatomic to the galactic and to whimsically illustrate how everything is made of atoms, which behave as both particle and waves.</p>
-          <p><strong>I'll be releasing <em>Ampersand</em> here on February 15th</strong>, but if you'd like to see it before then, please <a href="mailto:eclareshea@gmail.com?subject=Ampersand">email me</a>.</p>
+          <h5>Credits</h5>
+          <p>Many thanks to <a href="http://www.simonwilches.com/" target="blank">Simón Wilches Castro</a> (animation), <a href="http://www.imdb.com/name/nm3740923/" target="blank">Marcello Dubaz</a> (sound design), <a href="https://www.linkedin.com/in/brett-shea-1107442b" target="blank">Brett Shea</a> (concept research), and <strong>Mike Patterson</strong> and <strong>Candace Reckinger</strong> (advisors) for helping me with this project.</p>
+
           <h5>Festivals + Awards</h5>
           <ul>
             <li>Winner: Sloan Science and Film Grant</li>
+            <li>Shortlist Selection: Quantum Shorts, Singapore, Australia, Canada, Scotland, 2017
             <li>Official Selection: Fresh Meet International Festival Ecuador, 2017</li>
             <li>Official Selection: California Women's Film Festival, 2017</li>
             <li>Official Selection: Bay Area International Children's Film Festival, 2017</li>
             <li>Official Selection: Children's Film Festival Seattle, 2017</li>
+            <li>Official Selection: Barcelona Planet Festival, Spain, 2017</li>
+            <li>Official Selection: Riverrun International Film Festival, North Carolina, 2017</li>
             <li>Official Selection: Best Film Awards Festival, Romania, 2017</li>
             <li>Official Selection: Bellingham Children's Film Festival, 2017</li>
             <li>Official Selection: Los Angeles International Children's Film Festival, 2016</li>
