--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
           <p><b>Erin Clare Shea</b> is a Venice, CA-based designer and multi-media artist. Her animated films have screened in galleries and festivals across five continents, and music and themes of nature and science inspire her work. When she’s not making art or working as a Product Designer at <a href="https://www.signalsciences.com" target="blank">Signal Sciences</a>, she’s most likely outside swimming, running, skiing, or learning to surf.</b>
 
           <p>Erin received her MFA in Animation from the <a href="https://cinema.usc.edu/animation/index.cfm" target="blank">University of Southern California</a> where she was an Annenberg Fellow for her work on visualizing information. She also won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce her thesis <i>Ampersand</i>, a music video inspired by the wave particle duality.</p>
+          <p><strong>Question? Ideas? <a href="mailto:eclareshea@gmail.com">Get in touch</a>.</strong></p>
         </div>
       </div>
 
