--- a/ampersand.html
+++ b/ampersand.html
@@ -66,7 +66,7 @@
           <p><em>Ampersand</em> is a quantum physics-inspired music video for the song "In Love with Dusk" by <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a>. I won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce it, and it has screened in film festivals and galleries in almost a dozen countries across five continents.</p>
           <p>The intent behind <em>Ampersand</em> was to take the audience on a delightful journey from the subatomic to the galactic and to whimsically illustrate how everything is made of atoms, which behave as both particle and waves.</p>
           <h5>Credits</h5>
-          <p>Many thanks to <a href="http://www.simonwilches.com/" target="blank">Simón Wilches Castro</a> (animation), <a href="http://www.imdb.com/name/nm3740923/" target="blank">Marcello Dubaz</a> (sound design), <a href="https://www.linkedin.com/in/brett-shea-1107442b" target="blank">Brett Shea</a> (concept research), and <strong>Mike Patterson</strong> and <strong>Candace Reckinger</strong> (advisors) for helping me with this project.</p>
+          <p>Many thanks to <a href="http://www.simonwilches.com/" target="blank">Simón Wilches Castro</a> (animation), <a href="https://keepshellyinathens.blogspot.com/p/blog-page.html" target="blank">Keep Shelly in Athens</a> (music), <a href="http://www.imdb.com/name/nm3740923/" target="blank">Marcello Dubaz</a> (sound design), <a href="https://www.linkedin.com/in/brett-shea-1107442b" target="blank">Brett Shea</a> (concept research), and <strong>Mike Patterson</strong> and <strong>Candace Reckinger</strong> (advisors) for helping me create my vision.</p>
 
           <h5>Festivals + Awards</h5>
           <ul>
