--- a/ampersand.html
+++ b/ampersand.html
@@ -54,6 +54,11 @@
           </nav>
         </div>
       </div>
+      <div class="row banner">
+        <div class="col-xs-12 text-center">
+          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts Audience Choice Award <a class="btn btn-primary" href="http://shorts2017.quantumlah.org/" role="button">Vote now</a></p>
+        </div>
+      </div>
       <div class="row section">
         <div class="col-sm-7">
           <div class="embed-responsive embed-responsive-16by9">
