--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
           </nav>
         </div>
       </div>
+      <div class="row banner">
+        <div class="col-xs-12 text-center">
+          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts Audience Choice Award <a class="btn btn-primary" href="http://shorts2017.quantumlah.org/" role="button">Vote now</a></p>
+        </div>
+      </div>
       <div class="row section hero">
         <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
           <h1>Ampersand</h1>
