--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="row banner">
         <div class="col-xs-12 text-center">
-          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts Audience Choice Award <a class="btn btn-primary" href="http://shorts2017.quantumlah.org/" role="button">Vote now</a></p>
+          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote now</a></p>
         </div>
       </div>
       <div class="row section hero">
