--- a/ampersand.html
+++ b/ampersand.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row banner">
         <div class="col-xs-12 text-center">
-          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts Audience Choice Award <a class="btn btn-primary" href="http://shorts2017.quantumlah.org/" role="button">Vote now</a></p>
+          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote now</a></p>
         </div>
       </div>
       <div class="row section">
@@ -76,7 +76,7 @@
           <h5>Festivals + Awards</h5>
           <ul>
             <li>Winner: Sloan Science and Film Grant</li>
-            <li>Shortlist Selection: Quantum Shorts, Singapore, Australia, Canada, Scotland, 2017
+            <li>Shortlist Finalist: Quantum Shorts, Singapore, Australia, Canada, Scotland, 2017
             <li>Official Selection: Fresh Meet International Festival Ecuador, 2017</li>
             <li>Official Selection: California Women's Film Festival, 2017</li>
             <li>Official Selection: Bay Area International Children's Film Festival, 2017</li>
