--- a/ampersand.html
+++ b/ampersand.html
@@ -56,7 +56,8 @@
       </div>
       <div class="row banner">
         <div class="col-xs-12 text-center">
-          <p><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote now</a></p>
+          <p class="desktop"><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote now</a></p>
+          <p class="mobile"><img src="assets/heart.svg" class="heart"/>Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote for Ampersand</a></p>
         </div>
       </div>
       <div class="row section">
@@ -77,10 +78,10 @@
           <ul>
             <li>Winner: Sloan Science and Film Grant</li>
             <li>Shortlist Finalist: Quantum Shorts, Singapore, Australia, Canada, Scotland, 2017
-            <li>Official Selection: Fresh Meet International Festival Ecuador, 2017</li>
             <li>Official Selection: California Women's Film Festival, 2017</li>
             <li>Official Selection: Bay Area International Children's Film Festival, 2017</li>
             <li>Official Selection: Children's Film Festival Seattle, 2017</li>
+            <li>Official Selection: Fresh Meet International Festival Ecuador, 2017</li>
             <li>Official Selection: Barcelona Planet Festival, Spain, 2017</li>
             <li>Official Selection: Riverrun International Film Festival, North Carolina, 2017</li>
             <li>Official Selection: Best Film Awards Festival, Romania, 2017</li>
