--- a/ampersand.html
+++ b/ampersand.html
@@ -65,7 +65,7 @@
           <div class="embed-responsive embed-responsive-16by9">
             <iframe src="https://player.vimeo.com/video/183772682" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
-          <img class="img-responsive" src="assets/ampersand.jpg"/>
+          <img class="img-responsive collage" src="assets/ampersand.jpg"/>
         </div>
         <div class="col-sm-5">
           <h4>Ampersand</h4>
