--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Erin Clare Shea | Designer + Artist | Venice, CA</title>
+    <title>Erin Clare Shea | Designer + Artist | Denver, CO</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -60,7 +60,7 @@
         </div>
         <div class="col-sm-5">
           <h4>About</h4>
-          <p><b>Erin Clare Shea</b> is a Venice, CA-based designer and multi-media artist. Her animated films have screened in galleries and festivals across five continents, and music and themes of nature and science inspire her work. When she’s not making art or working as a Product Designer at <a href="https://www.signalsciences.com" target="blank">Signal Sciences</a>, she’s most likely outside swimming, running, skiing, or learning to surf.</b>
+          <p><b>Erin Clare Shea</b> is a Denver, CO-based designer and multi-media artist. Her animated films have screened in galleries and festivals across five continents, and music and themes of nature and science inspire her work. When she’s not making art or working as a Product Designer at <a href="https://www.signalsciences.com" target="blank">Signal Sciences</a>, she’s most likely outside swimming, running, skiing, or learning to surf.</b>
 
           <p>Erin received her MFA in Animation from the <a href="https://cinema.usc.edu/animation/index.cfm" target="blank">University of Southern California</a> where she was an Annenberg Fellow for her work on visualizing information. She also won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce her thesis <i>Ampersand</i>, a music video inspired by the wave particle duality.</p>
           <p><strong>Question? Ideas? <a href="mailto:eclareshea@gmail.com">Get in touch</a>.</strong></p>
