comment out banner

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           </nav>
         </div>
       </div>
-      <div class="row banner">
+      <!-- <div class="row banner">
         <div class="col-xs-12 text-center">
           <p class="desktop"><img src="assets/heart.svg" class="heart"/>Ampersand is up for the Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote now</a></p>
           <p class="mobile"><img src="assets/heart.svg" class="heart"/>Quantum Shorts People's Choice Prize <a class="btn btn-primary" href="http://shorts2016.quantumlah.org/shortlist-vote" role="button">Vote for Ampersand</a></p>
         </div>
-      </div>
+      </div> -->
       <div class="row section hero">
         <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
           <h1>Ampersand</h1>
