copy changes on Product Design

--- a/product-design.html
+++ b/product-design.html
@@ -61,11 +61,11 @@
         </div>
         <div class="col-sm-5">
           <h4>Product Design</h4>
-          <p>Since May of 2014, I've worked as a Product Designer at <a href="http://www.signalsciences.com" target="blank">Signal Sciences</a>, a web application security start-up in Venice, CA.</p>
-          <p>(Cyber)security is something that increasingly impacts all of us as more and more of our personal data moves online. I work with an amazing cross-functional group to design and build a web protection platform that provides real-time monitoring and blocking against potential attacks.</p>
+          <p>From May of 2014 until January 2018, I worked as the first Product Designer at <a href="http://www.signalsciences.com" target="blank">Signal Sciences</a>, a web application security start-up in Los Angeles, CA.</p>
+          <p>(Cyber)security is something that increasingly impacts all of us as more and more of our personal data moves online. I worked with an amazing cross-functional group to design and build a web protection platform that provides real-time monitoring and blocking against potential attacks.</p>
           <p>Signal Sciences is designed for collaboration, so operations, development, and security teams can work together seamlessly toward a common goal; it offers actionable, real-time security data to help companies know when there’s a meaningful problem to address so security team can easily prioritize their efforts. By visualizing web traffic data in new and clear ways, our product helps companies understand exactly when they're being hacked, who's hacking them, and how.</p>
-          <p>Signal Sciences is trusted by companies like <strong>Vimeo</strong>, <strong>Etsy</strong>, <strong>Under Armour</strong>, and more.</p>
-          <p>My work with Signal Sciences encompasses a range of roles, from user experience (UX) design to user interface (UI) design, and some front-end coding.</p>
+          <p>Signal Sciences protects more than 10 billion web requests per day, and is trusted by companies like <strong>Adobe</strong>, <strong>Vimeo</strong>, <strong>Etsy</strong>, and more.</p>
+          <p>My work with Signal Sciences encompassed a range of roles, from user experience (UX) design to user interface (UI) design, and some front-end coding.</p>
         </div>
       </div>
 
