--- a/about.html
+++ b/about.html
@@ -60,10 +60,11 @@
         </div>
         <div class="col-sm-5">
           <h4>About</h4>
-          <p><b>Erin Clare Shea</b> is a Denver, CO-based designer and multi-media artist. Her animated films have screened in galleries and festivals across five continents, and music and themes of nature and science inspire her work. When she’s not making art or working as a Product Designer at <a href="https://www.signalsciences.com" target="blank">Signal Sciences</a>, she’s most likely outside swimming, running, skiing, or learning to surf.</b>
+          <p>I'm a Denver, CO-based designer and multi-media artist. My animated films have screened in galleries and festivals across five continents, and music and themes of nature, science, and spirituality inspire my work.</p>
+          <p>I also have a passion for UI/UX/Product Design, and I most recently worked as the first designer at <a href="https://www.signalsciences.com" target="blank">Signal Sciences</a> in Los Angeles.</p>
 
-          <p>Erin received her MFA in Animation from the <a href="https://cinema.usc.edu/animation/index.cfm" target="blank">University of Southern California</a> where she was an Annenberg Fellow for her work on visualizing information. She also won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce her thesis <i>Ampersand</i>, a music video inspired by the wave particle duality.</p>
-          <p><strong>Question? Ideas? <a href="mailto:eclareshea@gmail.com">Get in touch</a>.</strong></p>
+          <p>I received my MFA in Animation from the <a href="https://cinema.usc.edu/animation/index.cfm" target="blank">University of Southern California School of Cinematic Arts</a> where I was an Annenberg Fellow for my work on visualizing information. I also won a <a href="http://scienceandfilm.org/" target="blank">Sloan Science and Film Grant</a> to produce my thesis film, <i>Ampersand</i>, a music video inspired by the wave particle duality.</p>
+          <p><strong>Want to work together?</strong> <a href="mailto:eclareshea@gmail.com">Let's talk!</a></p>
         </div>
       </div>
 
