--- a/animation.html
+++ b/animation.html
@@ -68,8 +68,8 @@
         </div>
         <div class="col-sm-5">
           <h4>Animation</h4>
-          <p>I love making animation to express the beautiful and the silly parts of life. Music and sound are integral to my work, and my techniques range from hand drawn to experimental animation using macro photography.</p>
-          <p>Here's a selection of my short films. You can see the rest on my <a href="https://vimeo.com/erinclareshea" target="blank">Vimeo</a> page.</p>
+          <p>Music and sound are integral to my work, and my techniques range from hand drawn to experimental animation using macro photography.</p>
+          <p>Here's a selection of my animations. You can see the rest on my <a href="https://vimeo.com/erinclareshea" target="blank">Vimeo</a> page.</p>
         </div>
       </div>
 
