--- a/animation.html
+++ b/animation.html
@@ -57,6 +57,9 @@
       <div class="row section">
         <div class="col-sm-7">
           <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://player.vimeo.com/video/290608256" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
             <iframe src="https://player.vimeo.com/video/55505609" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
