--- a/redtail.html
+++ b/redtail.html
@@ -57,12 +57,12 @@
       <div class="row section">
         <div class="col-sm-7">
           <img class="img-responsive" src="assets/redtail.png"/>
+          <img class="img-responsive" src="assets/redtail.png"/>
         </div>
         <div class="col-sm-5">
-          <h4>Album Cover</h4>
-          <p>My friend <b>Bill Scarpato</b> is an amazing musician. His band <b>Redtail</b> released their album <b>Junesongs</b> last summer, and I had a blast doing the cover art.</p>
-          <p>Redtail’s sound draws on classic rock vibes with bright twists, so it needed an upbeat colorful image for the album cover. A psychedelic redtail hawk soaring through space seemed fitting.</p>
-          <p>Check out Junesongs on <a href="https://redtailphila.bandcamp.com/album/junesongs">Soundcloud.</a></p>
+          <h4>Illustration</h4>
+          <p>Here's a selection of drawn images I've created for personal and professional use.</p>
+
         </div>
       </div>
 
@@ -72,7 +72,7 @@
             <a class="network fa fa-twitter" href="https://www.twitter.com/signalsciences" target="blank"></a>
             <a class="network fa fa-linkedin" href="https://www.linkedin.com/company/signal-sciences" target="blank"></a>
           </div>
-          <p><span>© 2019 Erin Clare Shea</span></p>
+          <p><span>© 2021 Erin Clare Shea</span></p>
         </div>
       </footer>
     </div>
