--- a/redtail.html
+++ b/redtail.html
@@ -57,7 +57,12 @@
       <div class="row section">
         <div class="col-sm-7">
           <img class="img-responsive" src="assets/redtail.png"/>
-          <img class="img-responsive" src="assets/redtail.png"/>
+          <img class="img-responsive" src="assets/Drawing1.jpg"/>
+          <img class="img-responsive" src="assets/Drawing2.jpg"/>
+          <img class="img-responsive" src="assets/Drawing3.jpg"/>
+          <img class="img-responsive" src="assets/Drawing4.jpg"/>
+          <img class="img-responsive" src="assets/Drawing5.jpg"/>
+          <img class="img-responsive" src="assets/Drawing6.jpg"/>
         </div>
         <div class="col-sm-5">
           <h4>Illustration</h4>
