--- a/redtail.html
+++ b/redtail.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row section">
         <div class="col-sm-7">
-          <img class="img-responsive" src="assets/redtail.png"/>
+          <img class="img-responsive" src="assets/illustration.png"/>
           <img class="img-responsive" src="assets/Drawing1.jpg"/>
           <img class="img-responsive" src="assets/Drawing2.JPG"/>
           <img class="img-responsive" src="assets/Drawing3.JPG"/>
