borders on drawings

--- a/redtail.html
+++ b/redtail.html
@@ -57,12 +57,12 @@
       <div class="row section">
         <div class="col-sm-7">
           <img class="img-responsive" src="assets/illustration.png"/>
-          <img class="img-responsive" src="assets/Drawing1.jpg"/>
-          <img class="img-responsive" src="assets/Drawing2.JPG"/>
-          <img class="img-responsive" src="assets/Drawing3.JPG"/>
-          <img class="img-responsive" src="assets/Drawing4.JPG"/>
-          <img class="img-responsive" src="assets/Drawing5.jpg"/>
-          <img class="img-responsive" src="assets/Drawing6.JPG"/>
+          <img class="img-responsive" src="assets/Drawing1.png"/>
+          <img class="img-responsive" src="assets/Drawing2.png"/>
+          <img class="img-responsive" src="assets/Drawing3.png"/>
+          <img class="img-responsive" src="assets/Drawing4.png"/>
+          <img class="img-responsive" src="assets/Drawing5.png"/>
+          <img class="img-responsive" src="assets/Drawing6.png"/>
         </div>
         <div class="col-sm-5">
           <h4>Illustration</h4>
